<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDosen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />

        <TextView
            android:id="@+id/txtNidn"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNMDosen"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/txtNidn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imgDosen"
            android:layout_width="115dp"
            android:layout_height="114dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/txtGelar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/diri" />

        <TextView
            android:id="@+id/txtGelar"
            android:layout_width="215dp"
            android:layout_height="17dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/gelar"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNidn" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:text="email"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGelar" />

        <TextView
            android:id="@+id/txtAlamat"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/alamat"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>