<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuDosen">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/data_diri"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDataDiri" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="9dp"
        android:text="@string/daf_krs"
        android:textSize="10pt"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btnKrs" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="9dp"
        android:text="@string/kelas"
        android:textSize="10pt"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btnKelas" />

    <ImageButton
        android:id="@+id/btnDataDiri"
        android:layout_width="96dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/diri" />

    <ImageButton
        android:id="@+id/btnKrs"
        android:layout_width="96dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/btnKelas"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/krs" />

    <ImageButton
        android:id="@+id/btnKelas"
        android:layout_width="96dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

</androidx.constraintlayout.widget.ConstraintLayout>